# FORGEMATE_FINAL

./: README.md
forge_ws/: run.sh
forge_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
forge_ws/devel/lib/forgemate/: run.py
forge_ws/devel/lib/pkgconfig/: forgemate.pc
forge_ws/devel/share/forgemate/cmake/: forgemateConfig.cmake
forge_ws/src/forgemate/: CMakeLists.txt  package.xml
forge_ws/src/forgemate/config/: config_controller.yaml  joint_names_forgemate.yaml
forge_ws/src/forgemate/launch/: display.launch  forgemate.launch  gazebo.launch
forge_ws/src/forgemate/meshes/: base_link.STL  grip1.STL  grip2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
forge_ws/src/forgemate/scripts/: IK-2.py  run.py
forge_ws/src/forgemate/urdf/: forge.urdf.xacro  forgemate.csv  forgemate.urdf  forgemate.xacro
